# SEA-Bridge

./: .dockerignore  .env.example  .env.template  .gitignore  AUTONOMOUS_FAMILY_NETWORK.md  AWS_TRANSLATE_SETUP.md  CLAUDE.md  Caddyfile  DOCUMENT_TRANSLATION_FEATURE.md  Dockerfile  Dockerfile.dev  FEATURE_UI_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  architecture.md  deploy-complete.sh  deploy-sea-lion.sh  docker-compose.dev.yml  docker-compose.yml  env.local.example  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  setup-local.sh  tailwind.config.ts  test-aws-creds.js
.github/: copilot-instructions.md
docs/: aws-bedrock-migration.md  blueprint.md
python-service/: .env.template  Dockerfile  Python_func.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py
python-service/scripts/: init_app.py  init_db.py  setup_aws_local.py
python-service/src/: config.py  main.py
python-service/src/api/: dependencies.py
python-service/src/api/routes/: __init__.py  auth.py  documents.py  users.py
python-service/src/core/: aws.py  cache_manager.py  document_parser.py  exceptions.py  logging.py  middleware.py  security.py  translation_engine.py  validators.py
python-service/src/db/: base_class.py  session.py
python-service/src/db/migrations/: env.py
python-service/src/models/: document.py  user.py
python-service/src/schemas/: __init__.py  base.py  document.py  token.py  user.py
python-service/src/sea_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-service/src/services/: document.py  storage.py  user.py
scripts/: voice-messages-migration.sql
scripts/aws-translate/: AWS_TRANSLATE_SETUP.md  setup-aws-translate.sh  translate-input-policy.json.bak  translate-output-policy.json.bak  translate-trust-policy.json
src/ai/: bedrock.ts  dev.ts  examples.ts  genkit.ts  streaming-examples.ts  transcribe.ts
src/ai/flows/: send-sms.ts  (+13 more)
src/app/: globals.css  layout.tsx  page.tsx
src/components/: complete-profile-gate.tsx  logo.tsx  onboarding-form.tsx
src/hooks/: use-auth.ts  use-aws-translation-job.ts  use-contacts.ts  use-fast-auto-translation.ts  use-file-upload.ts  use-interventions.ts  use-message-delete.ts  use-message-edit.ts  use-message-persistence.ts  use-message-query.ts  use-messages.ts  use-notification-sound.ts  use-onboarding-flow.ts  use-onboarding-mutations.ts  use-profile-by-role.ts  use-profile.ts  use-realtime-messages.ts  use-recaptcha.ts  use-translation-jobs.ts  use-translation.ts  use-voice-messages.ts  use-voice-transcription.ts
src/lib/: config.ts  contacts.ts  data.ts  dev-auth.ts  languages.ts  s3.ts  schemas.ts  utils.ts
translation-service/: Dockerfile  README.md  requirements.txt
workspace/: architecture.md
(+88 files in other folders)
